--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -31,31 +31,31 @@ body {
   line-height: $line-height-gr;
   word-break: break-word;
 }
-#app > div:first-of-type {
-  min-height: 100vh;
-  display: flex;
-  align-content: flex-start;
-  flex-wrap: wrap;
-}
-main {
-  width: 100%;
-  max-width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
+// #app > div:first-of-type {
+//   min-height: 100vh;
+//   display: flex;
+//   align-content: flex-start;
+//   flex-wrap: wrap;
+// }
+// main {
+//   width: 100%;
+//   max-width: 1000px;
+//   margin-left: auto;
+//   margin-right: auto;
 
-  &.resume-page {
-    max-width: 1100px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
+//   &.resume-page {
+//     max-width: 1100px;
+//     margin-left: auto;
+//     margin-right: auto;
+//   }
+// }
 
-.site-content {
-  min-height: calc(100vh - (19.25rem + 7.875rem + 30px));
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 3.75rem;
-}
+// .site-content {
+//   min-height: calc(100vh - (19.25rem + 7.875rem + 30px));
+//   display: flex;
+//   flex-direction: column;
+//   padding-bottom: 3.75rem;
+// }
 
 p,
 li,
@@ -149,8 +149,8 @@ a:visited {
       font-weight: 900;
       font-family: $font-secondary;
       text-transform: uppercase;
-      background-color: $color-primary;
-      color: $white;
+      background-color: $primary-dark;
+      color: white;
       background-image: none;
       font-size: 1rem;
       letter-spacing: 2px;
@@ -407,7 +407,7 @@ ul {
 // This SCSS is in the Global Stylesheet because it has to exist prior
 // to the component that needs it, the About view, running its scripts
 .rotate-header {
-  padding-top: 15px;
+  // padding-top: 15px;
   position: relative;
   font-weight: 300;
   font-size: 1.5rem;
@@ -587,8 +587,21 @@ code {
 //   //   padding-right: 30px;
 //   // }
 // }
+// .constraining-container {
+//   max-width: 1140px;
+//   overflow: hidden;
+//   width: 100%;
+//   margin: 0 auto;
+//   padding-left: 1.5rem;
+//   padding-right: 1.5rem;
+// }
 .constraining-container {
-  max-width: 1140px;
+  max-width: $xl-breakpoint;
   width: 100%;
   margin: 0 auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+h4 {
+  margin-top: 0;
 }
