--- a/src/assets/scss/theme/_variables.scss
+++ b/src/assets/scss/theme/_variables.scss
@@ -1,260 +1,261 @@
 $font-brand: "Pacifico", "Monotype Corsiva", script;
 
-// // $breakpoint-sm: 576px;
-// // $breakpoint-sm-min: 577px;
-// // $breakpoint-md: 768px;
-// // $breakpoint-md-min: 769px;
-// // $breakpoint-lg: 992px;
-// // $breakpoint-lg-min: 993px;
-// $xxs-breakpoint-max: 479px;
-// $xxs-breakpoint: 480px;
+// $breakpoint-sm: 576px;
+// $breakpoint-sm-min: 577px;
+// $breakpoint-md: 768px;
+// $breakpoint-md-min: 769px;
+// $breakpoint-lg: 992px;
+// $breakpoint-lg-min: 993px;
+$xxs-breakpoint-max: 479px;
+$xxs-breakpoint: 480px;
 
-// $xs-breakpoint-min: 480px;
-// $xs-breakpoint-max: 575px;
-// $xs-breakpoint: 576px;
+$xs-breakpoint-min: 480px;
+$xs-breakpoint-max: 575px;
+$xs-breakpoint: 576px;
 
-// $sm-breakpoint-min: 576px;
-// $sm-breakpoint-max: 767px;
+$sm-breakpoint-min: 576px;
+$sm-breakpoint-max: 767px;
 
 
-// $md-breakpoint-min: 768px;
-// $md-breakpoint-max: 991px;
+$md-breakpoint-min: 768px;
+$md-breakpoint-max: 991px;
 
-// $lg-breakpoint-min: 992px;
-// $lg-breakpoint-max: 1199px;
+$lg-breakpoint-min: 992px;
+$lg-breakpoint-max: 1199px;
 
-// $xl-breakpoint-min: 1200px;
-// $xl-breakpoint-max: 1399px;
-// $md-breakpoint: 992px;
+$xl-breakpoint-min: 1200px;
+$xl-breakpoint-max: 1399px;
+$md-breakpoint: 992px;
 
-// $xxl-breakpoint-min: 1400px;
+$xxl-breakpoint-min: 1400px;
 
-// $xs-breakpoint: $sm-breakpoint-min;
-// $sm-breakpoint: $md-breakpoint-min;
-// $md-breakpoint: $lg-breakpoint-min;
-// $lg-breakpoint: $xl-breakpoint-min;
-// $xl-breakpoint: $xxl-breakpoint-min;
+$xs-breakpoint: $sm-breakpoint-min;
+$sm-breakpoint: $md-breakpoint-min;
+$md-breakpoint: $lg-breakpoint-min;
+$lg-breakpoint: $xl-breakpoint-min;
+$xl-breakpoint: $xxl-breakpoint-min;
 
-// $breakpoint-sm: $xs-breakpoint-max;
-// $breakpoint-sm-min: calc($sm-breakpoint-min + 1);
-// $breakpoint-md: $md-breakpoint-min;
-// $breakpoint-md-min: calc($md-breakpoint-min + 1);
-// $breakpoint-lg: $lg-breakpoint-min;
-// $breakpoint-lg-min: calc($lg-breakpoint-min + 1);
+$breakpoint-sm: $xs-breakpoint-max;
+$breakpoint-sm-min: calc($sm-breakpoint-min + 1);
+$breakpoint-md: $md-breakpoint-min;
+$breakpoint-md-min: calc($md-breakpoint-min + 1);
+$breakpoint-lg: $lg-breakpoint-min;
+$breakpoint-lg-min: calc($lg-breakpoint-min + 1);
 
-// $white: #fff;
-// $black: hsl(210, 40%, 15%);
-// $box-shadow-md-transparent: 0 3px 7px 0 hsla(0, 0%, 0%, 0), 0 1px 9px 0 hsla(0, 0, 0, 0);
-// $box-shadow-sm: 0 1px 2px 0 hsla(0, 0%, 0%, 0.17), 0 1px 5px 0 hsla(0, 0%, 0%, 0.11);
-// $box-shadow-md: 0 3px 7px 0 hsla(0, 0%, 0%, 0.15), 0 1px 9px 0 hsla(0, 0, 0, 0.15);
-// $box-shadow-lg: 0 2px 10px 0 hsla(0, 0%, 0%, 0.17), 0 1px 13px 0 hsla(0, 0, 0, 0.11);
-// $line-height-gr: 1.618;
+$white: #fff;
+$black: hsl(210, 40%, 15%);
+$box-shadow-md-transparent: 0 3px 7px 0 hsla(0, 0%, 0%, 0), 0 1px 9px 0 hsla(0, 0, 0, 0);
+$box-shadow-sm: 0 1px 2px 0 hsla(0, 0%, 0%, 0.17), 0 1px 5px 0 hsla(0, 0%, 0%, 0.11);
+$box-shadow-md: 0 3px 7px 0 hsla(0, 0%, 0%, 0.15), 0 1px 9px 0 hsla(0, 0, 0, 0.15);
+$box-shadow-lg: 0 2px 10px 0 hsla(0, 0%, 0%, 0.17), 0 1px 13px 0 hsla(0, 0, 0, 0.11);
+$line-height-gr: 1.618;
 
-// $font-primary: 'Open Sans', Arial, sans-serif;
-// $font-body: $font-primary;
-// $font-secondary: Lato, Geneva, Tahoma, sans-serif;
-// $font-body-alt: $font-secondary;
-// $font-tertiary: Oswald, Impact, sans-serif;
-// $font-header: $font-tertiary;
-// $font-code: "PT Mono", Monaco, Menlo, monospace;
+$font-primary: 'Open Sans', Arial, sans-serif;
+$font-body: $font-primary;
+$font-secondary: Lato, Geneva, Tahoma, sans-serif;
+$font-body-alt: $font-secondary;
+$font-tertiary: Oswald, Impact, sans-serif;
+$font-header: $font-tertiary;
+$font-code: "PT Mono", Monaco, Menlo, monospace;
 
-// $yellow: hsla(58, 100, 65, 0.7);
+$yellow: hsla(58, 100, 65, 0.7);
 
-// $bg-light-gray: hsl(200, 20%, 97%);
-// $bg-med-gray: hsl(200, 20%, 94%);
+$bg-light-gray: hsl(200, 20%, 97%);
+$bg-med-gray: hsl(200, 20%, 94%);
 
-// $border-red: hsla(355, 80%, 80%, 1.0);
-// $border-red-vivid: hsla(355, 100%, 75%, 1.0);
+$border-red: hsla(355, 80%, 80%, 1.0);
+$border-red-vivid: hsla(355, 100%, 75%, 1.0);
 
-// $border-yellow: hsla(55, 85%, 70%, 1.0);
-// $border-yellow-vivid: hsla(55, 100%, 55%, 1.0);
+$border-yellow: hsla(55, 85%, 70%, 1.0);
+$border-yellow-vivid: hsla(55, 100%, 55%, 1.0);
 
-// $border-green: hsla(167, 95%, 80%, 1.0);
-// $border-green-vivid: hsl(167, 100%, 65%);
+$border-green: hsla(167, 95%, 80%, 1.0);
+$border-green-vivid: hsl(167, 100%, 65%);
 
-// $border-blue: hsl(216, 92.5%, 80%);
-// $border-blue-vivid: hsl(216, 100%, 75%);
+$border-blue: hsl(216, 92.5%, 80%);
+$border-blue-vivid: hsl(216, 100%, 75%);
 
-// $border-purple: hsl(253, 87.5%, 82.5%);
-// $border-purple-vivid: hsla(253, 95%, 75%, 1.0);
+$border-purple: hsl(253, 87.5%, 82.5%);
+$border-purple-vivid: hsla(253, 95%, 75%, 1.0);
 
-// $border-lightest-gray: hsl(200,16%,96%);
-// $border-light-gray: hsl(200, 14%, 92%);
-// $border-med-gray: hsl(200, 14%, 76%);
-// $border-dark-gray: hsl(200, 14%, 56%);
-// $link-red: hsl(355, 80%, 75%);
-// $link-red-darker: hsl(355, 80%, 65%);
-// $link-red-vivid: hsla(355, 92.5%, 67.5%, 100%);
-// $link-yellow: hsl(58, 100%, 65%);
-// $link-yellow-darker: hsl(58, 65%, 50%);
-// $link-yellow-vivid: hsla(58, 95%, 62.5%, 100%);
-// $link-green: hsl(175, 80%, 65%);
-// $link-green-darker: hsl(175, 50%, 45%);
-// $link-blue: hsl(197, 80%, 65%);
-// $link-blue-darker: hsl(197, 90%, 45%);
-// $link-purple: hsl(240, 80%, 75%);
-// $link-purple-darker: hsl(240, 90%, 65%);
-// $highlight-yellow: hsla(58, 100%, 65%, 0.7);
-// $color-primary-lighter: hsl(210, 10%, 94%);
-// $color-primary-light: hsl(210, 10%, 87.5%);
-// $color-primary: hsl(210, 25%, 27%);
-// $color-primary-med: hsl(210, 25, 36%);
-// $white: #fff;
-// $black: hsl(210, 35%, 10%);
-// $yellow-accent-bar: linear-gradient(90deg,
-// gold 0%,
-// hsla(58, 100%, 85%, 0.5) 30%,
-// hsl(58, 100%, 55%) 65%,
-// hsl(58, 100%, 75%) 90%);
-// $pastel-rainbow-bar: linear-gradient(90deg,
-//   hsl(58, 100%, 75%) 7.5%,
-//   hsl(58, 100%, 82.5%) 12.5%,
-//   hsl(175, 100%, 75%) 27.5%,
-//   hsl(197, 100%, 82.5%) 42.5%,
-//   hsl(240, 100%, 85%) 57.5%,
-//   hsl(355, 100%, 90%) 80%);
+$border-lightest-gray: hsl(200,16%,96%);
+$border-light-gray: hsl(200, 14%, 92%);
+$border-med-gray: hsl(200, 14%, 76%);
+$border-dark-gray: hsl(200, 14%, 56%);
+$link-red: hsl(355, 80%, 75%);
+$link-red-darker: hsl(355, 80%, 65%);
+$link-red-vivid: hsla(355, 92.5%, 67.5%, 100%);
+$link-yellow: hsl(58, 100%, 65%);
+$link-yellow-darker: hsl(58, 65%, 50%);
+$link-yellow-vivid: hsla(58, 95%, 62.5%, 100%);
+$link-green: hsl(175, 80%, 65%);
+$link-green-darker: hsl(175, 50%, 45%);
+$link-blue: hsl(197, 80%, 65%);
+$link-blue-darker: hsl(197, 90%, 45%);
+$link-purple: hsl(240, 80%, 75%);
+$link-purple-darker: hsl(240, 90%, 65%);
+$highlight-yellow: hsla(58, 100%, 65%, 0.7);
+$color-primary-lighter: hsl(210, 10%, 94%);
+$color-primary-light: hsl(210, 10%, 87.5%);
+$color-primary: hsl(210, 25%, 27%);
+$color-primary-med: hsl(210, 25, 36%);
+$white: #fff;
+$black: hsl(210, 35%, 10%);
+$yellow-accent-bar: linear-gradient(90deg,
+gold 0%,
+hsla(58, 100%, 85%, 0.5) 30%,
+hsl(58, 100%, 55%) 65%,
+hsl(58, 100%, 75%) 90%);
+$pastel-rainbow-bar: linear-gradient(90deg,
+  hsl(58, 100%, 75%) 7.5%,
+  hsl(58, 100%, 82.5%) 12.5%,
+  hsl(175, 100%, 75%) 27.5%,
+  hsl(197, 100%, 82.5%) 42.5%,
+  hsl(240, 100%, 85%) 57.5%,
+  hsl(355, 100%, 90%) 80%);
 
-//   $rainbow-box-shadow: hsl(175, 100%, 65%) 0 2px 0,
-//   hsla(58, 100%, 65%, 0.096) -2px 0 0,
-//   hsl(240, 80%, 75%) 2px 0 0,
-//   hsl(355, 80%, 80%) 0 -2px 0;
+  $rainbow-box-shadow: hsl(175, 100%, 65%) 0 2px 0,
+  hsla(58, 100%, 65%, 0.096) -2px 0 0,
+  hsl(240, 80%, 75%) 2px 0 0,
+  hsl(355, 80%, 80%) 0 -2px 0;
   
-//   $rainbow-box-shadow-lg-alt: hsl(0, 80%, 80%) 20px 0 0, 
-//   hsl(58, 100%, 60%) 0 20px 0,
-//   hsl(175, 100%, 65%) 0 -20px 0,
-//   hsl(197, 100%, 55%) -20px 0 0;
+  $rainbow-box-shadow-lg-alt: hsl(0, 80%, 80%) 20px 0 0, 
+  hsl(58, 100%, 60%) 0 20px 0,
+  hsl(175, 100%, 65%) 0 -20px 0,
+  hsl(197, 100%, 55%) -20px 0 0;
 
-// $rainbow-box-shadow-lg: hsl(175, 100%, 65%) 0 -2px 0,
-//   hsl(58, 100%, 60%) 0 2px 0,
-// hsl(197, 100%, 55%) 2px 0 0,
-// hsl(240, 80%, 69%) -2px 0 0;
+$rainbow-box-shadow-lg: hsl(175, 100%, 65%) 0 -2px 0,
+  hsl(58, 100%, 60%) 0 2px 0,
+hsl(197, 100%, 55%) 2px 0 0,
+hsl(240, 80%, 69%) -2px 0 0;
 
-// $rainbow-box-shadow-dark: hsl(175, 80%, 50%) 0 2px,
-//   hsl(58, 100%, 60%) -2px 0,
-//   hsl(240, 80%, 69%) 2px 0,
-//   hsl(355, 80%, 72.5%) 0 -2px;
-// $rainbow-gradient-light-alt: linear-gradient(
-//   0,
-//   hsl(259, 83%, 80%) 0%,
-//   hsl(259, 83%, 85%) 5%,
-//   hsl(197, 100%, 85%) 17%,
-//   hsl(197, 100%, 85%) 25%,
-//   hsl(175, 92%, 87%) 35%,
-//   hsl(49, 100%, 70%) 60%,
-//   hsl(0, 80%, 90%) 85%
-// );
-// $rainbow-gradient-light: linear-gradient(
-//     -240deg,
-//     hsl(259, 83%, 80%) 0%,
-//     hsl(259, 83%, 85%) 5%,
-//     hsl(197, 100%, 85%) 17%,
-//     hsl(197, 100%, 85%) 25%,
-//     hsl(175, 92%, 87%) 35%,
-//     hsl(49, 100%, 70%) 60%,
-//     hsl(0, 80%, 90%) 85%
-// );
-// $rainbow-gradient-med: linear-gradient(
-//   90deg,
-//   $border-purple 0%,
-//   $border-blue 20%,
-//   $border-green 40%,
-//   $border-yellow 55%,
-//   $border-red 95%
-// );
-// $rainbow-gradient-med-alt: linear-gradient(
-//   0,
-//   $border-purple 0%,
-//   $border-blue 20%,
-//   $border-green 40%,
-//   $border-yellow 55%,
-//   $border-red 95%
-// );
-// $rainbow-gradient-dark-alt: linear-gradient(
-//   0,
-//   $border-purple 0%,
-//   $border-blue 20%,
-//   $border-green 40%,
-//   $border-yellow 55%,
-//   $border-red 95%
-// );
-// $rainbow-gradient-dark: linear-gradient(
-//   90deg,
-//   $link-red 10.5%,
-//   $link-yellow 39.5%,
-//   $link-green 50%,
-//   $link-blue 67.5%,
-//   $link-purple 82.5%
-// );
-// $rainbow-gradient-darker: linear-gradient(
-//   90deg,
-//   $link-red-darker 10.5%,
-//   $link-yellow-darker 39.5%,
-//   $link-green-darker 50%,
-//   $link-blue-darker 67.5%,
-//   $link-purple-darker 82.5%
-// );
-// $rainbow-gradient-radial: radial-gradient(
-//   205deg,
-//   rgb(255, 249, 77) 10%,
-//   rgb(77, 255, 240) 30%,
-//   rgb(77, 255, 240) 40%,
-//   rgb(184, 235, 255) 52%,
-//   rgb(184, 235, 255) 62%,
-//   rgb(189, 189, 255) 70%,
-//   rgb(255, 214, 218) 90%
-// );
+$rainbow-box-shadow-dark: hsl(175, 80%, 50%) 0 2px,
+  hsl(58, 100%, 60%) -2px 0,
+  hsl(240, 80%, 69%) 2px 0,
+  hsl(355, 80%, 72.5%) 0 -2px;
+$rainbow-gradient-light-alt: linear-gradient(
+  0,
+  hsl(259, 83%, 80%) 0%,
+  hsl(259, 83%, 85%) 5%,
+  hsl(197, 100%, 85%) 17%,
+  hsl(197, 100%, 85%) 25%,
+  hsl(175, 92%, 87%) 35%,
+  hsl(49, 100%, 70%) 60%,
+  hsl(0, 80%, 90%) 85%
+);
+$rainbow-gradient-light: linear-gradient(
+    -240deg,
+    hsl(259, 83%, 80%) 0%,
+    hsl(259, 83%, 85%) 5%,
+    hsl(197, 100%, 85%) 17%,
+    hsl(197, 100%, 85%) 25%,
+    hsl(175, 92%, 87%) 35%,
+    hsl(49, 100%, 70%) 60%,
+    hsl(0, 80%, 90%) 85%
+);
+$rainbow-gradient-med: linear-gradient(
+  90deg,
+  $border-purple 0%,
+  $border-blue 20%,
+  $border-green 40%,
+  $border-yellow 55%,
+  $border-red 95%
+);
+$rainbow-gradient-med-alt: linear-gradient(
+  0,
+  $border-purple 0%,
+  $border-blue 20%,
+  $border-green 40%,
+  $border-yellow 55%,
+  $border-red 95%
+);
+$rainbow-gradient-dark-alt: linear-gradient(
+  0,
+  $border-purple 0%,
+  $border-blue 20%,
+  $border-green 40%,
+  $border-yellow 55%,
+  $border-red 95%
+);
+$rainbow-gradient-dark: linear-gradient(
+  90deg,
+  hsl(355, 80%, 75%) 0%,
+  hsl(355, 80%, 75%) 15%,
+  hsl(58, 100%, 65%) 39.5%,
+  hsl(175, 80%, 65%) 50%,
+  hsl(197, 80%, 65%) 67.5%,
+  hsl(240, 80%, 75%) 82.5%
+);
+$rainbow-gradient-darker: linear-gradient(
+  90deg,
+  $link-red-darker 10.5%,
+  $link-yellow-darker 39.5%,
+  $link-green-darker 50%,
+  $link-blue-darker 67.5%,
+  $link-purple-darker 82.5%
+);
+$rainbow-gradient-radial: radial-gradient(
+  205deg,
+  rgb(255, 249, 77) 10%,
+  rgb(77, 255, 240) 30%,
+  rgb(77, 255, 240) 40%,
+  rgb(184, 235, 255) 52%,
+  rgb(184, 235, 255) 62%,
+  rgb(189, 189, 255) 70%,
+  rgb(255, 214, 218) 90%
+);
 
-// $rainbow-gradient-radial-light: linear-gradient(
-//   90deg,
-//   hsl(354, 100%, 79%),
-//   hsl(240, 100%, 70%),
-//   hsl(175, 100%, 82%),
-//   transparent,
-//   hsl(58, 100%, 78%),
-//   hsl(354, 100%, 73%),
-//   transparent
-// );
-// $nav-text-hover: lighten($black, 17.5%);
-// $nav-text: lighten($border-dark-gray, 7.5%);
+$rainbow-gradient-radial-light: linear-gradient(
+  90deg,
+  hsl(354, 100%, 79%),
+  hsl(240, 100%, 70%),
+  hsl(175, 100%, 82%),
+  transparent,
+  hsl(58, 100%, 78%),
+  hsl(354, 100%, 73%),
+  transparent
+);
+$nav-text-hover: lighten($black, 17.5%);
+$nav-text: lighten($border-dark-gray, 7.5%);
 
-// $primary-dark: darken($color-primary, 10%);
-// $primary: #344556;
-// $primary-light: lighten($color-primary, 25%);
+$primary-dark: darken($color-primary, 10%);
+$primary: #344556;
+$primary-light: lighten($color-primary, 25%);
 
 
-// @mixin rainbow-border($colorMode) {
-//   position: relative;
-//   z-index: 1;
-//   width: 100%;
-//   background-image: $rainbow-gradient-dark-alt;
-//   border-radius: 4px;
+@mixin rainbow-border($colorMode) {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  background-image: $rainbow-gradient-dark-alt;
+  border-radius: 4px;
 
-//   &::before {
-//     content: '';
-//     width: 100%;
-//     display: block;
-//     position: absolute;
-//     background-image: $rainbow-gradient-light, $rainbow-gradient-med-alt, $rainbow-gradient-light, $rainbow-gradient-med-alt;
-//     background-size: 100% 4px, 4px 100%, 100% 4px, 4px 100%;
-//     background-position: top, right, bottom, left;
-//     z-index: 12;
-//     left: 0;
-//     top: 0;
-//   }
+  &::before {
+    content: '';
+    width: 100%;
+    display: block;
+    position: absolute;
+    background-image: $rainbow-gradient-light, $rainbow-gradient-med-alt, $rainbow-gradient-light, $rainbow-gradient-med-alt;
+    background-size: 100% 4px, 4px 100%, 100% 4px, 4px 100%;
+    background-position: top, right, bottom, left;
+    z-index: 12;
+    left: 0;
+    top: 0;
+  }
 
-//   &::after {
-//     content: '';
-//     display: block;
-//     border-radius: 8px;
-//     position: absolute;
-//     background-color: $primary-dark;
-//     border-radius: 8px;
-//     width: calc(100% - 16px);
-//     height: calc(100% - 16px);
-//     z-index: 12;
-//     left: 8px;
-//     top: 8px;
-//     border-radius: 4px;
-//   }
-// }
-// $duotone-gray: #afb4bb;
+  &::after {
+    content: '';
+    display: block;
+    border-radius: 8px;
+    position: absolute;
+    background-color: $primary-dark;
+    border-radius: 8px;
+    width: calc(100% - 16px);
+    height: calc(100% - 16px);
+    z-index: 12;
+    left: 8px;
+    top: 8px;
+    border-radius: 4px;
+  }
+}
+$duotone-gray: #afb4bb;
