--- a/src/assets/scss/theme/_typography.scss
+++ b/src/assets/scss/theme/_typography.scss
@@ -29,19 +29,19 @@
     font-family: $font-primary;
 
     @media all and (min-width: $md-breakpoint) {
-      font-size: 2.35rem;
+      font-size: 2.5rem;
     }
   }
 
   h2 {
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 1px;
+    // text-transform: uppercase;
+    letter-spacing: -1px;
     font-family: $font-primary;
-    font-size: 1.675rem;
+    font-size: 2rem;
+    font-weight: 500;
     
     @media all and (min-width: $md-breakpoint) {
-      font-size: 1.9rem;
+      font-size: 2.2rem;
     }
 
     &:first-of-type {
