--- a/src/assets/scss/theme/_base.scss
+++ b/src/assets/scss/theme/_base.scss
@@ -1,8 +1,7 @@
 // @import "@/assets/scss/theme/_reset.scss";
-@import "@/assets/scss/theme/_helpers.scss";
+@import '@/assets/scss/theme/_helpers.scss';
 // @import "@/assets/scss/theme/_grid.scss";
 // @import "@/assets/scss/theme/_helpers.scss";
-
 
 html {
   font-size: 16px;
@@ -25,8 +24,8 @@ body {
   // transform: translate3d(0, 0, 0);
 }
 
-@import "_buttons.scss";
-@import "_typography.scss";
+@import '_buttons.scss';
+@import '_typography.scss';
 
 hr {
   border-top: 1px solid $duotone-gray;
@@ -34,12 +33,27 @@ hr {
 
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity .5s ease;
+  transition: opacity 0.5s ease;
 }
 
 .fade-enter-from,
 .fade-leave-to {
   opacity: 0;
+}
+
+.slide-up-enter-active,
+.slide-up-leave-active {
+  transition: all 0.25s ease-out;
+}
+
+.slide-up-enter-from {
+  opacity: 0;
+  transform: translateY(30px);
+}
+
+.slide-up-leave-to {
+  opacity: 0;
+  transform: translateY(-30px);
 }
 
 .round-rainbow-icon {
