--- a/src/assets/scss/theme/_helpers.scss
+++ b/src/assets/scss/theme/_helpers.scss
@@ -1,7 +1,13 @@
 // @mixin tertiary-title {}
 // @mixin tertiary-label {
-  
+
 // }
+@mixin body-accent-text {
+  font-size: 1rem;
+  font-weight: 300;
+  font-family: Oswald, Impact, sans-serif;
+  letter-spacing: 1px;
+}
 @mixin rainbow-border($colorMode) {
   position: relative;
   z-index: 1;
@@ -14,7 +20,8 @@
     width: 100%;
     display: block;
     position: absolute;
-    background-image: $rainbow-gradient-light, $rainbow-gradient-med-alt, $rainbow-gradient-light, $rainbow-gradient-med-alt;
+    background-image: $rainbow-gradient-light, $rainbow-gradient-med-alt,
+      $rainbow-gradient-light, $rainbow-gradient-med-alt;
     background-size: 100% 4px, 4px 100%, 100% 4px, 4px 100%;
     background-position: top, right, bottom, left;
     z-index: 12;
@@ -38,7 +45,7 @@
   }
 }
 
-$font-brand: "Pacifico", "Monotype Corsiva", script;
+$font-brand: 'Pacifico', 'Monotype Corsiva', script;
 
 // $breakpoint-sm: 576px;
 // $breakpoint-sm-min: 577px;
@@ -55,7 +62,6 @@ $xs-breakpoint: 576px;
 
 $sm-breakpoint-min: 576px;
 $sm-breakpoint-max: 767px;
-
 
 $md-breakpoint-min: 768px;
 $md-breakpoint-max: 991px;
@@ -84,10 +90,14 @@ $breakpoint-lg-min: calc($lg-breakpoint-min + 1);
 
 $white: #fff;
 $black: hsl(210, 40%, 15%);
-$box-shadow-md-transparent: 0 3px 7px 0 hsla(0, 0%, 0%, 0), 0 1px 9px 0 hsla(0, 0, 0, 0);
-$box-shadow-sm: 0 1px 2px 0 hsla(0, 0%, 0%, 0.17), 0 1px 5px 0 hsla(0, 0%, 0%, 0.11);
-$box-shadow-md: 0 3px 7px 0 hsla(0, 0%, 0%, 0.15), 0 1px 9px 0 hsla(0, 0, 0, 0.15);
-$box-shadow-lg: 0 2px 10px 0 hsla(0, 0%, 0%, 0.17), 0 1px 13px 0 hsla(0, 0, 0, 0.11);
+$box-shadow-md-transparent: 0 3px 7px 0 hsla(0, 0%, 0%, 0),
+  0 1px 9px 0 hsla(0, 0, 0, 0);
+$box-shadow-sm: 0 1px 2px 0 hsla(0, 0%, 0%, 0.17),
+  0 1px 5px 0 hsla(0, 0%, 0%, 0.11);
+$box-shadow-md: 0 3px 7px 0 hsla(0, 0%, 0%, 0.15),
+  0 1px 9px 0 hsla(0, 0, 0, 0.15);
+$box-shadow-lg: 0 2px 10px 0 hsla(0, 0%, 0%, 0.17),
+  0 1px 13px 0 hsla(0, 0, 0, 0.11);
 $line-height-gr: 1.618;
 
 $font-primary: 'Open Sans', Arial, sans-serif;
@@ -96,29 +106,29 @@ $font-secondary: Lato, Geneva, Tahoma, sans-serif;
 $font-body-alt: $font-secondary;
 $font-tertiary: Oswald, Impact, sans-serif;
 $font-header: $font-tertiary;
-$font-code: "PT Mono", Monaco, Menlo, monospace;
+$font-code: 'PT Mono', Monaco, Menlo, monospace;
 
 $yellow: hsla(58, 100, 65, 0.7);
 
 $bg-light-gray: hsl(200, 20%, 97%);
 $bg-med-gray: hsl(200, 20%, 94%);
 
-$border-red: hsla(355, 80%, 80%, 1.0);
-$border-red-vivid: hsla(355, 100%, 75%, 1.0);
+$border-red: hsla(355, 80%, 80%, 1);
+$border-red-vivid: hsla(355, 100%, 75%, 1);
 
-$border-yellow: hsla(55, 85%, 70%, 1.0);
-$border-yellow-vivid: hsla(55, 100%, 55%, 1.0);
+$border-yellow: hsla(55, 85%, 70%, 1);
+$border-yellow-vivid: hsla(55, 100%, 55%, 1);
 
-$border-green: hsla(167, 95%, 80%, 1.0);
+$border-green: hsla(167, 95%, 80%, 1);
 $border-green-vivid: hsl(167, 100%, 65%);
 
 $border-blue: hsl(216, 92.5%, 80%);
 $border-blue-vivid: hsl(216, 100%, 75%);
 
 $border-purple: hsl(253, 87.5%, 82.5%);
-$border-purple-vivid: hsla(253, 95%, 75%, 1.0);
+$border-purple-vivid: hsla(253, 95%, 75%, 1);
 
-$border-lightest-gray: hsl(200,16%,96%);
+$border-lightest-gray: hsl(200, 16%, 96%);
 $border-light-gray: hsl(200, 14%, 92%);
 $border-med-gray: hsl(200, 14%, 76%);
 $border-dark-gray: hsl(200, 14%, 56%);
@@ -141,33 +151,33 @@ $color-primary: hsl(210, 25%, 27%);
 $color-primary-med: hsl(210, 25, 36%);
 $white: #fff;
 $black: hsl(210, 35%, 10%);
-$yellow-accent-bar: linear-gradient(90deg,
-gold 0%,
-hsla(58, 100%, 85%, 0.5) 30%,
-hsl(58, 100%, 55%) 65%,
-hsl(58, 100%, 75%) 90%);
-$pastel-rainbow-bar: linear-gradient(90deg,
+$yellow-accent-bar: linear-gradient(
+  90deg,
+  gold 0%,
+  hsla(58, 100%, 85%, 0.5) 30%,
+  hsl(58, 100%, 55%) 65%,
+  hsl(58, 100%, 75%) 90%
+);
+$pastel-rainbow-bar: linear-gradient(
+  90deg,
   hsl(58, 100%, 75%) 7.5%,
   hsl(58, 100%, 82.5%) 12.5%,
   hsl(175, 100%, 75%) 27.5%,
   hsl(197, 100%, 82.5%) 42.5%,
   hsl(240, 100%, 85%) 57.5%,
-  hsl(355, 100%, 90%) 80%);
+  hsl(355, 100%, 90%) 80%
+);
 
 $rainbow-box-shadow: hsl(175, 100%, 65%) 0 2px 0,
-  hsla(58, 100%, 65%, 0.096) -2px 0 0,
-  hsl(240, 80%, 75%) 2px 0 0,
+  hsla(58, 100%, 65%, 0.096) -2px 0 0, hsl(240, 80%, 75%) 2px 0 0,
   hsl(355, 80%, 80%) 0 -2px 0;
 
 $rainbow-box-shadow-lg: hsl(175, 100%, 65%) 0 -2.5px 0,
-  hsl(58, 100%, 60%) 0 2.5px 0,
-hsl(197, 100%, 55%) 2.5px 0 0,
-hsl(240, 80%, 69%) -2.5px 0 0;
+  hsl(58, 100%, 60%) 0 2.5px 0, hsl(197, 100%, 55%) 2.5px 0 0,
+  hsl(240, 80%, 69%) -2.5px 0 0;
 
-$rainbow-box-shadow-dark: hsl(175, 80%, 50%) 0 2px,
-  hsl(58, 100%, 60%) -2px 0,
-  hsl(240, 80%, 69%) 2px 0,
-  hsl(355, 80%, 72.5%) 0 -2px;
+$rainbow-box-shadow-dark: hsl(175, 80%, 50%) 0 2px, hsl(58, 100%, 60%) -2px 0,
+  hsl(240, 80%, 69%) 2px 0, hsl(355, 80%, 72.5%) 0 -2px;
 $rainbow-gradient-light-alt: linear-gradient(
   0,
   hsl(259, 83%, 80%) 0%,
@@ -179,14 +189,14 @@ $rainbow-gradient-light-alt: linear-gradient(
   hsl(0, 80%, 90%) 85%
 );
 $rainbow-gradient-light: linear-gradient(
-    -240deg,
-    hsl(259, 83%, 80%) 0%,
-    hsl(259, 83%, 85%) 5%,
-    hsl(197, 100%, 85%) 17%,
-    hsl(197, 100%, 85%) 25%,
-    hsl(175, 92%, 87%) 35%,
-    hsl(49, 100%, 70%) 60%,
-    hsl(0, 80%, 90%) 85%
+  -240deg,
+  hsl(259, 83%, 80%) 0%,
+  hsl(259, 83%, 85%) 5%,
+  hsl(197, 100%, 85%) 17%,
+  hsl(197, 100%, 85%) 25%,
+  hsl(175, 92%, 87%) 35%,
+  hsl(49, 100%, 70%) 60%,
+  hsl(0, 80%, 90%) 85%
 );
 $rainbow-gradient-med: linear-gradient(
   90deg,
@@ -292,8 +302,6 @@ $green: $link-green;
 $blue: $link-blue;
 $highlighter: hsl(58, 100%, 78%);
 $yellow: gold;
-
-
 
 @mixin icon-round-rainbow-border {
   line-height: 1em;
